syntax = "proto2";

package MMPro.micromsg;


message FavVideoInfo {
	optional string _FileId = 1;
	optional string _AesKey = 2;
	optional string _VideoId = 3;
}
